# agentic-video-analyst

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  download-models.sh  setup-backend.sh  setup-complete.sh  start-all.sh
backend/: .env.example  http_bridge.py  main.py  requirements.txt  run.sh  status.sh
backend/agents/: __init__.py  base_agent.py  generation_agent.py  orchestrator_agent.py  transcription_agent.py  vision_agent.py
backend/mcp_servers/: __init__.py  base_mcp_server.py  generation_mcp.py  transcription_mcp.py  vision_mcp.py
backend/tests/: README.md  test_all.sh  test_connection.py  test_generation.py  test_grpc.sh  test_grpc_client.py  test_models.py  test_orchestrator.py  test_query.py  test_transcription.py  test_vision.py
backend/tests/results/: .gitignore  transcription_result.json  video_presentation.pptx  vision_result.json
backend/tests/utilities/: create_registry.py
docs/: README.md  architecture.md  development-guide.md  getting-started.md  grpc-implementation.md  installation.md  model-comparison.md  model-setup.md  orchestrator.md  repository-structure.md
frontend/: .gitignore  README.md  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: README.md
frontend/src/components/: ChatInterface.tsx  VideoInfo.tsx  VideoUpload.tsx
frontend/src/hooks/: useChatHistory.ts  useVideoQuery.ts  useVideoUpload.ts
frontend/src/services/: api.ts
proto/: video_analysis.proto
