[package]
name = "video-analysis-ai"
version = "0.1.0"
description = "Local AI Video Analysis Desktop Application"
authors = ["Intel Assignment"]
license = ""
repository = ""
default-run = "video-analysis-ai"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "dialog-all", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-exists", "http-all", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
